--- a/css/public.css
+++ b/css/public.css
@@ -33,6 +33,11 @@ a {
 .btn_box{
     width:100%;
     float:left;
+}
+.btn_div{
+    display:block;
+    position:relative;
+    text-decoration:none;
     background-color:#ff6600;
     color:#fff;
     font-size:18px;
@@ -40,6 +45,11 @@ a {
     text-align:center;
     border-radius:5px;
     margin-top:40px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.btn_div:active,
+.btn_div:focus{
+    background-color:#d26100;
 }
 input:focus{
     border:1px solid #ff6600 !important;
@@ -62,7 +72,7 @@ input:-ms-input-placeholder{
     width:100%;
     height:52px;
     float:left;
-    position:fixed;
+    position:absolute;
     box-sizing:border-box;
     padding:10px 20px;
     background-color:#f2f2f2;
@@ -83,7 +93,7 @@ input:-ms-input-placeholder{
 }
 .contact_box{
     box-sizing:border-box;
-    padding:15px 40px;
+    padding:15px 30px 15px 40px;
     background-color:#f2f2f2;
     border-top:1px solid #e2e2e2;
 }
