--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,102 @@
     color:#ff7600;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
+/*课程列表*/
+.chapter_body,
+.chapter_title{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.chapter_title .line{
+    width:100%;
+    height:1px;
+    float:left;
+    background-color:#e3e3e3;
+    margin:45px 0px;
+}
+.chapter_title h2{
+    box-sizing:border-box;
+    padding:0px 10px;
+    font-size:16px;
+    line-height:20px;
+    color:#5a5a5a;
+    background-color:#fff;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+    -moz-transform:translate(-50%,-50%);
+}
+.chapter_box{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:8px;
+    margin-bottom:30px;
+}
+.chapter_box .chapter_div{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    border:4px solid #ff7600;
+    margin-bottom:15px;
+}
+.chapter_box .chapter_div .img_box{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.chapter_box .chapter_div .img_box .chapter_img{
+    width:100%;
+    float:left;
+}
+.chapter_box .chapter_div .img_box .status_box{
+    position:absolute;
+    right:3%;
+    bottom:10%;
+    box-sizing:border-box;
+    padding:2px 6px;
+    border-radius:4px;
+}
+.chapter_box .chapter_div .img_box .w_btn{
+    background-color:#fff;
+}
+.chapter_box .chapter_div .img_box .b_btn{
+    background-color:#3ba9e2;
+}
+.chapter_box .chapter_div .img_box .o_btn{
+    background-color:#ff7600;
+}
+.chapter_box .chapter_div .img_box .w_btn h2{
+    color:#ff7600;
+}
+.chapter_box .chapter_div .img_box .b_btn h2,
+.chapter_box .chapter_div .img_box .o_btn h2{
+    color:#fff;
+}
+.chapter_box .chapter_div .img_box .status_box img{
+    height:18px;
+    float:left;
+}
+.chapter_box .chapter_div .img_box .status_box h2{
+    min-width:48px;
+    float:left;
+    margin-left:5px;
+    font-size:14px;
+    line-height:18px;
+    text-align:center;
+}
+.chapter_box .chapter_div .chapter_name{
+    width:100%;
+    float:left;
+    background-color:#ff7600;
+    box-sizing:border-box;
+    padding:8px 5px;
+    font-size:16px;
+    color:#fff;
+    line-height:20px;
+}
