--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,10 @@
     box-sizing:border-box;
     padding:2px 6px;
     border-radius:4px;
+    /*禁用文字选择*/
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 .chapter_box .chapter_div .img_box .w_btn{
     background-color:#fff;
@@ -197,4 +201,122 @@
     font-size:16px;
     color:#fff;
     line-height:20px;
+}
+.chapter_box .chapter_div:active{
+    border:4px solid #d26100;
+}
+.chapter_box .chapter_div:active .chapter_name{
+    background-color:#d26100;
+}
+.chapter_box .chapter_div:active .w_btn{
+    background-color:#dbdbdb;
+}
+.chapter_box .chapter_div:active .b_btn{
+    background-color:#3292c4;
+}
+.chapter_box .chapter_div:active .o_btn{
+    background-color:#d26100;
+}
+
+
+
+
+
+.prompt_body{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:20px;
+}
+.alert_box{
+    width:100%;
+    float:left;
+    display:none;
+}
+.alert_bg{
+    width:100%;
+    float:left;
+    height:2000px;
+    position:fixed;
+    top:0;
+    left:0;
+    background-color:#000;
+    opacity:0.7;
+    z-index:110;
+}
+.alert_div{
+    width:70%;
+    position:fixed;
+    left:15%;
+    top:50%;
+    border-radius:5px;
+    background-color:#fff;
+    box-sizing:border-box;
+    transform:translateY(-50%);
+    -webkit-transform:translateY(-50%);
+    -moz-transform:translateY(-50%);
+    z-index:120;
+    overflow:hidden;
+}
+.alert_div .alert_title{
+    width:100%;
+    height:50px;
+    float:left;
+    background-color:#ff7600;
+    position:relative;
+}
+.alert_div .alert_title img{
+    height:30px;
+    position:absolute;
+    top:10px;
+    left:50%;
+    transform:translateX(-50%);
+    -webkit-transform:translateX(-50%);
+    -moz-transform:translateX(-50%);
+}
+.alert_div h2{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:40px 20px 50px 20px;
+    font-size:18px;
+    line-height:22px;
+    text-align:center;
+    color:#262626;
+}
+.alert_div .alert_btn_box{
+    width:100%;
+    float:left;
+}
+.alert_div .alert_btn_box .one_btn{
+     width:100%;
+}
+.alert_div .alert_btn_box .two_btn{
+     width:50%;
+}
+.alert_div .alert_btn_box .one_btn,
+.alert_div .alert_btn_box .two_btn{
+    float:left;
+    height:40px;
+    font-size:16px;
+    line-height:40px;
+    text-align:center;
+    box-sizing:border-box;
+    border-top:1px solid #d1d1d1;
+    
+    /*禁用文字选择*/
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+.alert_div .alert_btn_box .one_btn:active,
+.alert_div .alert_btn_box .two_btn:active{
+    background-color:rgba(0,0,0,0.1);
+}
+.alert_div .alert_btn_box .agree{
+    color:#ff7600;
+}
+.alert_div .alert_btn_box .disagree{
+    color:#919191;
+    border-left:1px solid #d1d1d1;
 }
