--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@
     top:15%;
     left:30%;
     background-size:100%;
+    background:no-repeat;
 }
 .menu_box .menu_title .menu_div .home{
     background-image:url(../images/home_icon.png);
@@ -321,7 +322,112 @@
 .menu_box .menu_content .btn_box .btn_div{
     margin:0;
 }
-
+/*课程列表*/
+.section_body,
+.section_title{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.section_title h2{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:0px 10px;
+    font-size:18px;
+    line-height:20px;
+    text-align:center;
+    color:#606060;
+    margin:35px 0px;
+}
+.chapter_box{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:8px;
+    margin-bottom:30px;
+}
+.chapter_box .chapter_div{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    border:4px solid #ff7600;
+    margin-bottom:15px;
+}
+.chapter_box .chapter_div .img_box{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.chapter_box .chapter_div .img_box .chapter_img{
+    width:100%;
+    float:left;
+}
+.chapter_box .chapter_div .img_box .status_box{
+    position:absolute;
+    right:3%;
+    bottom:10%;
+    box-sizing:border-box;
+    padding:2px 6px;
+    border-radius:4px;
+    /*禁用文字选择*/
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+.chapter_box .chapter_div .img_box .w_btn{
+    background-color:#fff;
+}
+.chapter_box .chapter_div .img_box .b_btn{
+    background-color:#3ba9e2;
+}
+.chapter_box .chapter_div .img_box .o_btn{
+    background-color:#ff7600;
+}
+.chapter_box .chapter_div .img_box .w_btn h2{
+    color:#ff7600;
+}
+.chapter_box .chapter_div .img_box .b_btn h2,
+.chapter_box .chapter_div .img_box .o_btn h2{
+    color:#fff;
+}
+.chapter_box .chapter_div .img_box .status_box img{
+    height:18px;
+    float:left;
+}
+.chapter_box .chapter_div .img_box .status_box h2{
+    min-width:48px;
+    float:left;
+    margin-left:5px;
+    font-size:14px;
+    line-height:18px;
+    text-align:center;
+}
+.chapter_box .chapter_div .chapter_name{
+    width:100%;
+    float:left;
+    background-color:#ff7600;
+    box-sizing:border-box;
+    padding:8px 5px;
+    font-size:16px;
+    color:#fff;
+    line-height:20px;
+}
+.chapter_box .chapter_div:active{
+    border:4px solid #d26100;
+}
+.chapter_box .chapter_div:active .chapter_name{
+    background-color:#d26100;
+}
+.chapter_box .chapter_div:active .w_btn{
+    background-color:#dbdbdb;
+}
+.chapter_box .chapter_div:active .b_btn{
+    background-color:#3292c4;
+}
+.chapter_box .chapter_div:active .o_btn{
+    background-color:#d26100;
+}
 
 /*提示信息*/
 .prompt_body{
