--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,8 @@
     -webkit-transform:translate(-50%,-50%);
     -moz-transform:translate(-50%,-50%);
 }
-.chapter_box{
+.chapter_box,
+.section_box{
     width:100%;
     float:left;
     box-sizing:border-box;
@@ -142,17 +143,21 @@
     box-sizing:border-box;
     border:4px solid #ff7600;
     margin-bottom:15px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.chapter_box .chapter_div .img_box{
+.chapter_box .chapter_div .img_box,
+.section_box .section_div .img_box{
     width:100%;
     float:left;
     position:relative;
 }
-.chapter_box .chapter_div .img_box .chapter_img{
+.chapter_box .chapter_div .img_box .chapter_img,
+.section_box .section_div .img_box .section_img{
     width:100%;
     float:left;
 }
-.chapter_box .chapter_div .img_box .status_box{
+.chapter_box .chapter_div .img_box .status_box,
+.section_box .section_div .img_box .status_box{
     position:absolute;
     right:3%;
     bottom:10%;
@@ -164,27 +169,33 @@
     -webkit-user-select: none;
     user-select: none;
 }
-.chapter_box .chapter_div .img_box .w_btn{
+.chapter_box .chapter_div .img_box .w_btn,
+.section_box .section_div .img_box .w_btn{
     background-color:#fff;
 }
 .chapter_box .chapter_div .img_box .b_btn{
     background-color:#3ba9e2;
 }
-.chapter_box .chapter_div .img_box .o_btn{
+.chapter_box .chapter_div .img_box .o_btn,
+.section_box .section_div .img_box .o_btn{
     background-color:#ff7600;
 }
-.chapter_box .chapter_div .img_box .w_btn h2{
+.chapter_box .chapter_div .img_box .w_btn h2,
+.section_box .section_div .img_box .w_btn h2{
     color:#ff7600;
 }
 .chapter_box .chapter_div .img_box .b_btn h2,
-.chapter_box .chapter_div .img_box .o_btn h2{
+.chapter_box .chapter_div .img_box .o_btn h2,
+.section_box .section_div .img_box .o_btn h2{
     color:#fff;
 }
-.chapter_box .chapter_div .img_box .status_box img{
+.chapter_box .chapter_div .img_box .status_box img,
+.section_box .section_div .img_box .status_box img{
     height:18px;
     float:left;
 }
-.chapter_box .chapter_div .img_box .status_box h2{
+.chapter_box .chapter_div .img_box .status_box h2,
+.section_box .section_div .img_box .status_box h2{
     min-width:48px;
     float:left;
     margin-left:5px;
@@ -241,6 +252,7 @@
     float:left;
     padding:15px;
     box-sizing:border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu_box .menu_title .menu_div .menu_btn{
     width:100%;
@@ -253,12 +265,14 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu_box .menu_title .menu_div .menu_bg,
 .menu_box .menu_title .menu_div .menu_icon img,
 .menu_box .menu_content .menu_img{
     width:100%;
     float:left;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu_box .menu_title .menu_div .menu_icon{
     width:40%;
@@ -267,6 +281,7 @@
     left:30%;
     background-size:100%;
     background-repeat:no-repeat;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu_box .menu_title .menu_div .home{
     background-image:url(../images/home_icon.png);
@@ -340,92 +355,35 @@
     color:#606060;
     margin:35px 0px;
 }
-.chapter_box{
+.section_box .section_div{
     width:100%;
     float:left;
     box-sizing:border-box;
-    padding:8px;
-    margin-bottom:30px;
-}
-.chapter_box .chapter_div{
-    width:100%;
-    float:left;
-    box-sizing:border-box;
-    border:4px solid #ff7600;
+    padding:3px;
+    border:1px solid #d5d5d5;
     margin-bottom:15px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.chapter_box .chapter_div .img_box{
+.section_box .section_div .section_name{
     width:100%;
     float:left;
-    position:relative;
-}
-.chapter_box .chapter_div .img_box .chapter_img{
-    width:100%;
-    float:left;
-}
-.chapter_box .chapter_div .img_box .status_box{
-    position:absolute;
-    right:3%;
-    bottom:10%;
-    box-sizing:border-box;
-    padding:2px 6px;
-    border-radius:4px;
-    /*禁用文字选择*/
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-}
-.chapter_box .chapter_div .img_box .w_btn{
     background-color:#fff;
-}
-.chapter_box .chapter_div .img_box .b_btn{
-    background-color:#3ba9e2;
-}
-.chapter_box .chapter_div .img_box .o_btn{
-    background-color:#ff7600;
-}
-.chapter_box .chapter_div .img_box .w_btn h2{
-    color:#ff7600;
-}
-.chapter_box .chapter_div .img_box .b_btn h2,
-.chapter_box .chapter_div .img_box .o_btn h2{
-    color:#fff;
-}
-.chapter_box .chapter_div .img_box .status_box img{
-    height:18px;
-    float:left;
-}
-.chapter_box .chapter_div .img_box .status_box h2{
-    min-width:48px;
-    float:left;
-    margin-left:5px;
-    font-size:14px;
-    line-height:18px;
-    text-align:center;
-}
-.chapter_box .chapter_div .chapter_name{
-    width:100%;
-    float:left;
-    background-color:#ff7600;
     box-sizing:border-box;
     padding:8px 5px;
     font-size:16px;
-    color:#fff;
+    color:#0e0e0e;
     line-height:20px;
 }
-.chapter_box .chapter_div:active{
-    border:4px solid #d26100;
-}
-.chapter_box .chapter_div:active .chapter_name{
-    background-color:#d26100;
-}
-.chapter_box .chapter_div:active .w_btn{
+.section_box .section_div:active{
     background-color:#dbdbdb;
 }
-.chapter_box .chapter_div:active .b_btn{
-    background-color:#3292c4;
+.section_box .section_div:active .section_name{
+    background-color:#dbdbdb;
 }
-.chapter_box .chapter_div:active .o_btn{
+.section_box .section_div:active .w_btn{
+    background-color:#dbdbdb;
+}
+.section_box .section_div:active .o_btn{
     background-color:#d26100;
 }
 
