--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,7 @@
     box-sizing:border-box;
     padding:10px 0px 10px 45px;
     border-bottom:1px solid #bebebe;
+    display:none;
 }
 .progress_box .progress_list .progress_div .progress_content li:first-child{
     border-top:0 !important;
@@ -510,6 +511,111 @@
 }
 .progress_box .progress_list .progress_div:last-child .progress_content{
     border-bottom:0;
+}
+/*培训课程*/
+.section_content{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:15px 15px 60px 15px;
+}
+.section_content h2{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:0px 8px 8px 8px;
+    border-left:3px solid #ff7600;
+    font-size:18px;
+    line-height:20px;
+    color:#ff7600;
+    font-weight:bold;
+    margin-bottom:15px;
+}
+.section_content img{
+    width:100%;
+    float:left;
+}
+.section_content h3{
+    width:100%;
+    float:left;
+    font-size:14px;
+    color:#5f5f5f;
+    line-height:18px;
+    margin-top:25px;
+}
+.section_content p{
+    width:100%;
+    float:left;
+    font-size:12px;
+    color:#5f5f5f;
+    margin-top:20px;
+}
+/*课程测验*/
+.exam_box{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:0px 20px 60px 20px;
+}
+.exam_box h2{
+    width:100%;
+    float:left;
+    font-size:18px;
+    line-height:20px;
+    color:#7f7f7f;
+}
+.exam_box h2 span{
+    width:30px;
+    float:left;
+    font-size:18px;
+    line-height:20px;
+    color:#7f7f7f;
+    font-weight:bold;
+}
+.exam_box .exam_div,
+.exam_box .exam_div .opation_div{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.exam_box .exam_div{
+    margin-top:35px;
+}
+.exam_box .exam_div .opation_div{
+    margin-top:15px;
+    /*禁用文字选择*/
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.exam_box .exam_div h3{
+    width:100%;
+    float:left;
+    font-size:16px;
+    line-height:20px;
+    color:#ff7600;
+}
+.exam_box .exam_div h3 img{
+    height:18px;
+    margin-bottom:-4px;
+    margin-left:10px;
+}
+.exam_box .exam_div .opation_div input{
+    width:14px;
+    height:14px;
+    position:absolute;
+    top:2px;
+    left:0;
+}
+.exam_box .exam_div .opation_div span{
+    width:100%;
+    float:left;
+    font-size:14px;
+    line-height:18px;
+    color:#595757;
+    padding-left:20px;
+    box-sizing:border-box;
 }
 /*提示信息*/
 .prompt_body{
