--- a/css/style.css
+++ b/css/style.css
@@ -519,36 +519,9 @@
     box-sizing:border-box;
     padding:15px 15px 60px 15px;
 }
-.section_content h2{
-    width:100%;
-    float:left;
-    box-sizing:border-box;
-    padding:0px 8px 8px 8px;
-    border-left:3px solid #ff7600;
-    font-size:18px;
-    line-height:20px;
-    color:#ff7600;
-    font-weight:bold;
-    margin-bottom:15px;
-}
 .section_content img{
     width:100%;
     float:left;
-}
-.section_content h3{
-    width:100%;
-    float:left;
-    font-size:14px;
-    color:#5f5f5f;
-    line-height:18px;
-    margin-top:25px;
-}
-.section_content p{
-    width:100%;
-    float:left;
-    font-size:12px;
-    color:#5f5f5f;
-    margin-top:20px;
 }
 /*课程测验*/
 .exam_box{
@@ -617,6 +590,71 @@
     padding-left:20px;
     box-sizing:border-box;
 }
+
+/* 礼品页面 */
+.price_box,
+.infor_box{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding:0px 15px 40px 15px;
+}
+.price_box .price_div,
+.infor_box .inofr_div{
+    width:50%;
+    float:left;
+    box-sizing:border-box;
+    padding:0px 15px 50px 15px;
+}
+.price_box .price_div img,
+.infor_box .inofr_div img{
+    width:100%;
+    float:left;
+    margin-bottom:1px;
+    border-radius:5px;
+}
+.price_box .price_div h2,
+.infor_box .inofr_div h2 {
+    width:100%;
+    float:left;
+    font-size:16px;
+    color:#231815;
+    line-height:20px;
+    margin-top:15px;
+}
+.infor_box .inofr_div h2{
+    min-height:70px;
+}
+.price_box .price_div h2{
+    margin-bottom:15px;
+}
+.price_box .price_div h3,
+.price_box .price_div h4{
+    width:100%;
+    float:left;
+    font-size:14px;
+    color:#231815;
+    line-height:16px;
+}
+.price_box .price_div h4{
+    box-sizing:border-box;
+    padding-left:45px;
+    margin-top:-16px;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+}
+.price_box .register_btn{
+    margin-top:20px;
+}
+.infor_box .register_btn{
+    margin-top:25px;
+}
+.infor_box .inofr_div .btn_div,
+.infor_box .inofr_div .end_div{
+    margin-top:0px;
+}
+
 /*提示信息*/
 .prompt_body{
     width:100%;
