--- a/css/style.css
+++ b/css/style.css
@@ -637,9 +637,9 @@
     -webkit-user-select: none;
     user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    font-weight:bold;
 }
 .redeem_record{
+    width:90px;
     background-color:#d6d6d7;
     color:#606060;
     top:0;
@@ -656,13 +656,14 @@
     background-color:#999491;
 }
 .price_box,
-.infor_box{
+.info_box{
     width:100%;
     float:left;
     border-bottom:1px solid #d9d9d9;
     margin-bottom:65px;
 }
-.price_box .price_div{
+.price_box .price_div,
+.info_box .info_div{
     width:100%;
     float:left;
     box-sizing:border-box;
@@ -675,15 +676,15 @@
     height:90px;
     float:left;
     position:absolute;
-    top:0;
+    top:20px;
     left:15px;
 }
 .price_box .price_div .price_content{
     width:100%;
-    min-height:90px;
+    height:130px;
     float:left;
     box-sizing:border-box;
-    padding:5px 95px 0px 105px;
+    padding:10px 95px 0px 105px;
 }
 .price_box .price_div .price_content h2{
     width:100%;
@@ -691,7 +692,7 @@
     font-size:16px;
     line-height:18px;
     color:#ff7600;
-    margin-bottom:8px;
+    margin-bottom:30px;
     font-weight:bold;
 }
 .price_box .price_div .price_content p{
@@ -699,31 +700,26 @@
     float:left;
     font-size:12px;
     color:#808080;
-    margin-bottom:24px;
+    margin-bottom:15px;
 }
 .price_box .price_div .price_content .like_icon{
     height:16px;
     float:left;
-    position:absolute;
-    bottom:5px;
-    left:120px;
 }
 .price_box .price_div .price_content h3{
     float:left;
     box-sizing:border-box;
-    position:absolute;
     font-size:14px;
     line-height:16px;
-    left:145px;
-    bottom:5px;
-    font-weight:bold;
+    margin-left:10px;
+    color:#415560;
 }
 /*兑换记录*/
 .record_box{
     width:100%;
     float:left;
     box-sizing:border-box;
-    padding:0px 20px 60px 70px;
+    padding:0px 40px 60px 50px;
 }
 .record_box .record_div{
     width:100%;
@@ -739,7 +735,6 @@
 .record_box .record_div h2,
 .record_box .record_div h3{
     font-size:14px;
-    font-weight:bold;
     color:#000;
 }
 .record_box .record_div h2{
@@ -747,6 +742,7 @@
     margin-left:20px;
 }
 .record_box .record_div h3{
+    width:60px;
     float:right;
 }
 .record_box .record_div .like_icon{
@@ -767,7 +763,10 @@
     margin:10px 0px;
     font-weight:bold;
 }
+/*资料领取*/
+.info_box{
 
+}
 /*提示信息*/
 .prompt_body{
     width:100%;
