--- a/css/style.css
+++ b/css/style.css
@@ -619,7 +619,8 @@
     margin-top:-32px;
 }
 .redeem_btn,
-.redeem_end{
+.redeem_end,
+.info_box .info_div .info_btn{
     position:absolute;
     width:80px;
     height:32px;
@@ -764,8 +765,42 @@
     font-weight:bold;
 }
 /*资料领取*/
-.info_box{
+.info_box .info_div{
 
+}
+.info_box .info_div .info_img{
+    width:90px;
+    height:90px;
+    position:absolute;
+    top:20px;
+    left:15px;
+}
+.info_box .info_div .info_content{
+    width:100%;
+    height:130px;
+    float:left;
+    box-sizing:border-box;
+    padding:10px 0px 15px 105px;
+}
+.info_box .info_div .info_content h2{
+    width:100%;
+    float:left;
+    font-size:16px;
+    color:#ff7600;
+    font-weight:bold;
+    line-height:18px;
+    margin-bottom:25px;
+}
+.info_box .info_div p{
+    width:100%;
+    float:left;
+    box-sizing:border-box;
+    padding-right:100px;
+    font-size:12px;
+    color:#606060;
+}
+.info_box .info_div .info_btn{
+    width:90px;
 }
 /*提示信息*/
 .prompt_body{
