--- a/css/style.css
+++ b/css/style.css
@@ -1007,7 +1007,32 @@
     position:absolute;
     bottom:15px;
 }
-
+/*证书页面*/
+.certificate_body{
+    width:100%;
+    float:left;
+    position:relative;
+}
+.certificate_body .certificate_bg{
+    width:100%;
+    float:left;
+}
+.certificate_body h2{
+    width:120px;
+    height:5%;
+    min-height:25px;
+    max-height:35px;
+    position:absolute;
+    top:26%;
+    left:50%;
+    margin-left:-60px;
+    border-bottom:1px solid #ff7600;
+    padding-bottom:10px;
+    font-size:24px;
+    padding-bottom:10px;
+    color:#3e3e3e;
+    text-align:center;
+}
 /*提示信息*/
 .prompt_body{
     width:100%;
